syntax = "proto3";

message One_acc_view {
    string account_number = 1;
    string cust_name = 2;
    double average_balance = 3;
    double accr_int = 4;
    double yld_to_call = 5;
    double int_rate = 6;
    double base_rate = 7;
    double final_ftp_rate = 8;
    int64 value_date = 9;
    int64 maturity_date = 10;
    int64 nxt_rep_dt = 11;
    int64 lst_rep_dt = 12;
    string mis1 = 13;
    string mis2 = 14;
    string psl_code = 15;
    string prod_type = 16;
    string rate_flag = 17;
    string repr_spread = 18;
    string source_file_name = 19;
    string ccy = 20;
    string gl = 21;
    string cust_id = 22;
    double final_ftp_amt = 23;
    string alm_line = 24;
    string trade_dt = 25;
    double init_dep_amt = 26;
    double outstanding_bal = 27;
    double adj1 = 28;
    double adj2 = 29;
    double adj3 = 30;
    double adj4 = 31;
    double adj5 = 32;
    double adj6 = 33;
    string input_benchmark = 34;
    string pdo = 35;
    string npa = 36;
    string method = 37;
    string rate_curve = 38;
    int64 org_tenor = 39;
    int64 rep_tenor = 40;
    double fx_spread = 41;
    double var_spread = 42;
    double first_ftp = 43;
    int64 bc_as_on_rule = 44;
    int64 tenor_start_date_rule = 45;
    int64 tenor_end_date_rule = 46;
    int64 bc_as_on_applied = 47;
    int64 tenor_start_date_applied = 48;
    int64 tenor_end_date_applied = 49;
    string alm_concat = 50;
    string two_point_concat = 51;
}
